# rustfft-c-ffi

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
include/: rustfft.h
sample/: CMakeLists.txt  main.cpp
src/: lib.rs
test/: CMakeLists.txt  main.cpp
